--- a/digital clock/clock.css
+++ b/digital clock/clock.css
@@ -6,7 +6,7 @@
 }
 
 .hero{
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     background: linear-gradient(45deg,#08001f,#30197d);
     color: #fff;
